--- a/MedScheduler/MedScheduler/MedScheduler.vcxproj
+++ b/MedScheduler/MedScheduler/MedScheduler.vcxproj
@@ -81,11 +81,13 @@
   <ItemGroup>
     <ClInclude Include="Doctor.h" />
     <ClInclude Include="fileHandler.h" />
+    <ClInclude Include="InvalidEntryError.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="node.h" />
     <ClInclude Include="Patient.h" />
     <ClInclude Include="Person.h" />
     <ClInclude Include="Queue.h" />
+    <ClInclude Include="Room.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -97,6 +99,7 @@
     <ClCompile Include="Patient.cpp" />
     <ClCompile Include="Person.cpp" />
     <ClCompile Include="Queue.cpp" />
+    <ClCompile Include="Room.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
