--- a/MedScheduler/MedScheduler/MedScheduler.vcxproj
+++ b/MedScheduler/MedScheduler/MedScheduler.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="Room.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="UnavailableRoomError.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Doctor.cpp" />
