--- a/MedScheduler/MedScheduler/MedScheduler.vcxproj.filters
+++ b/MedScheduler/MedScheduler/MedScheduler.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Room.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UnavailableRoomError.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
